--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,5 +54,6 @@ jobs:
           WITH_COVERAGE: true
           DISABLE_SPRING: 1
         run: |
-          bundle exec rails db:prepare
+          bundle exec rails db:create
+          bundle exec rails db:migrate
           bundle exec rails test
