--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,8 @@ jobs:
 
       - name: Instalar cliente PostgreSQL
         run: |
-          apt-get -yqq install libpq-dev
+          sudo apt-get update
+          sudo apt-get install -y libpq-dev
 
       - name: Cache de Gems do Ruby
         uses: actions/cache@v3
