--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
           --health-timeout 5s
           --health-retries 5
         env:
-          POSTGRES_PASSWORD: password
+          POSTGRES_PASSWORD: adm123  # Use a mesma senha definida no database.yml
 
     steps:
       - name: Checkout do Repositório
@@ -60,15 +60,15 @@ jobs:
 
       - name: Executar Testes
         env:
-          PG_DATABASE: postgres
+          PG_DATABASE: SistemaDeGerenciamento_test  # Nome do banco de dados de teste
           PG_HOST: localhost
-          PG_USER: postgres
-          PG_PASSWORD: password
-          RAILS_ENV: actions
+          PG_USER: postgres  # O usuário deve ser postgres
+          PG_PASSWORD: adm123  # Use a mesma senha definida
+          RAILS_ENV: test  # Altere para 'test'
           RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}
           WITH_COVERAGE: true
           DISABLE_SPRING: 1
         run: |
-          bundle exec rails db:create
-          bundle exec rails db:migrate
-          bundle exec rails test
+          bundle exec rails db:create  # Criação do banco de dados de teste
+          bundle exec rails db:migrate  # Migrações para o banco de dados de teste
+          bundle exec rails test  # Executa os testes
