--- a/test/fixtures/vagas.yml
+++ b/test/fixtures/vagas.yml
@@ -1,11 +1,9 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
 one:
-  titulo: MyString
-  descricao: MyText
+  titulo: "Vaga Um"
+  descricao: "Descrição da vaga um"
   empregador: one
 
 two:
-  titulo: MyString
-  descricao: MyText
+  titulo: "Vaga Dois"
+  descricao: "Descrição da vaga dois"
   empregador: two
