--- a/config/database.yml
+++ b/config/database.yml
@@ -15,6 +15,7 @@ test:
   username: vinni
   password: <%= ENV['DATABASE_PASSWORD'] %>  
   host: localhost
+  port: 5433
 
 production:
   adapter: postgresql
