--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
         ports:
           - 5433:5432
         options: >-
-          --health-cmd pg_isready -U postgres
+          --health-cmd pg_isready -U postgres -p 5432
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
@@ -51,7 +51,7 @@ jobs:
       - name: Aguardar pelo Postgres
         run: |
           for i in {1..30}; do
-            if pg_isready -h localhost -p 5432 -U postgres; then
+            if pg_isready -h localhost -p 5433 -U postgres; then
               echo "Postgres está pronto!"
               break
             fi
@@ -70,6 +70,9 @@ jobs:
         run: |
           bundle exec rails db:create
           bundle exec rails db:migrate
+
+      - name: Mostrar Logs do Postgres
+        run: docker logs $(docker ps -q --filter "name=postgres")
 
       - name: Executar Testes
         env:
