--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
         ports:
           - 5433:5432
         options: >-
-          --health-cmd pg_isready -p 5432
+          --health-cmd pg_isready -U postgres -p 5432
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
@@ -35,6 +35,11 @@ jobs:
         with:
           ruby-version: 3.1.2
 
+      - name: Instalar Bundler e Gems
+        run: |
+          gem install bundler
+          bundle install
+
       - name: Instalar Cliente PostgreSQL
         run: |
           sudo apt-get update
@@ -51,7 +56,7 @@ jobs:
       - name: Aguardar pelo Postgres
         run: |
           for i in {1..30}; do
-            if pg_isready -h localhost -p 5432 -U postgres; then
+            if pg_isready -h localhost -p 5433 -U postgres; then
               echo "Postgres está pronto!"
               break
             fi
