--- a/config/database.yml
+++ b/config/database.yml
@@ -3,7 +3,7 @@ default: &default
   encoding: unicode
   pool: 5
   username: vinni
-  password: <%= ENV['DATABASE_PASSWORD'] %>
+  password: <%= ENV['POSTGRES_PASSWORD'] %>
   host: localhost
 
 development:
@@ -11,8 +11,13 @@ development:
   database: SistemaDeGerenciamento_development
 
 test:
-  <<: *default
+  adapter: postgresql
+  encoding: unicode
   database: SistemaDeGerenciamento_test
+  pool: 5
+  username: vinni
+  password: <%= ENV['POSTGRES_PASSWORD'] %>
+  host: localhost
   port: 5433
 
 production:
