--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,13 +17,13 @@ jobs:
         ports:
           - 5433:5432
         options: >-
-          --health-cmd="pg_isready -d SistemaDeGerenciamento_test -U ${{ secrets.POSTGRES_USER }}"
+          --health-cmd="pg_isready -d SistemaDeGerenciamento_test -U postgres"
           --health-interval=10s
           --health-timeout=5s
           --health-retries=5
         env:
           POSTGRES_DB: SistemaDeGerenciamento_test
-          POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
+          POSTGRES_USER: postgres
           POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
 
     steps:
@@ -55,7 +55,7 @@ jobs:
       - name: Aguardar pelo Postgres
         run: |
           for i in {1..30}; do
-            if pg_isready -h localhost -p 5433 -U ${{ secrets.POSTGRES_USER }}; then
+            if pg_isready -h localhost -p 5433 -U postgres; then
               echo "Postgres está pronto!"
               break
             fi
@@ -65,10 +65,7 @@ jobs:
 
       - name: Configurar Banco de Dados
         env:
-          PG_DATABASE: SistemaDeGerenciamento_test
-          PG_HOST: localhost
-          PG_USER: ${{ secrets.POSTGRES_USER }}
-          PG_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+          DATABASE_URL: postgres://postgres:${{ secrets.POSTGRES_PASSWORD }}@localhost:5433/SistemaDeGerenciamento_test
           RAILS_ENV: test
           RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}
         run: |
@@ -80,10 +77,7 @@ jobs:
 
       - name: Executar Testes
         env:
-          PG_DATABASE: SistemaDeGerenciamento_test
-          PG_HOST: localhost
-          PG_USER: ${{ secrets.POSTGRES_USER }}
-          PG_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+          DATABASE_URL: postgres://postgres:${{ secrets.POSTGRES_PASSWORD }}@localhost:5433/SistemaDeGerenciamento_test
           RAILS_ENV: test
           RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}
           WITH_COVERAGE: true
